# HDRify

./: Cargo.toml  README.md  build.rs
src/: app.rs  config.rs  hdr.rs  main.rs  manager.rs  wmi_monitor.rs
