[package]
name = "hdrify"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hdrify"
path = "src/main.rs"

[dependencies]
tray-icon = "0.17"
wmi = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.14"
sysinfo = "0.30"
dirs = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-manifest = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
